<resources>
    <string name="app_name">RentalAja</string>
    <string name="onboarding">Menyediakan mobil rental yang dapat kamu pesan lewat smartphone android</string>
    <string name="masuk">Masuk</string>
    <string name="register">Daftar Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kategori_mobil">Toyota</string>
    <string name="nama_mobil">Toyota Cayla</string>
    <string name="harga">3500000</string>
    <string name="Rp">Rp.</string>
    <string name="perhari">/hari</string>
    <string name="ratingnya">5.0</string>
    <string name="usernamenya">No Name</string>
    <string name="emailnya">email@gmail.com</string>
    <string name="tipemesin">Automatic</string>
    <string name="liternya">55 Liter</string>
    <string name="orangnya">5 Orang</string>
    <string name="tipemesinya">SUV</string>
    <string name="tipemobilnya">SUV</string>
    <string name="durasi">Durasi Sewa</string>
    <string name="penyewa">Nama penyewa</string>
    <string name="email">paijo@gmail.com</string>
    <string name="menunggu">Menunggu Pembayaran</string>
    <string name="detailnya">Mohon lakukan pembayaran sebelum 2 x 24 jam dengan rincian sebagai berikut</string>
    <string name="norek">888-099-4343-4934903</string>
    <string name="transaksi">Transaksi Selesai</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="lengkapi">Lengkapi data diri anda</string>
    <string name="logout">Logout</string>
    <string name="logout1">Keluar</string>
    <string name="Pilih">Pilih</string>
    <string name="foto_profil">Foto profil</string>
    <string name="lengkapi1">Lengkapi dokumen persyaratan</string>
    <string name="lengkapan">Edit Dokumen</string>
    <string name="scan_ktp">Scan Ktp</string>
    <string name="scan_kk">Scan KK</string>
    <string name="scan_sim">Scan SIM</string>
    <string name="scan_stnk">Scan STNK</string>
    <string name="appwidget_text">data mobil :</string>
    <string name="add_widget">Add widget</string>
    <string name="random">Jumlah mobil</string>
    <string name="jumlah">34</string>
    <string name="nama">Paijo</string>
    <string name="status">Menunggu</string>
    <string name="status1">Status Sewa</string>
    <string name="durasi1">3</string>
    <string name="spasi"></string>
    <string name="total">Total </string>
</resources>