<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.DetailsewaFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/logo_rental"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_logo_kecil" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/ic_layout_border"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/gambar_mobil"
                android:layout_width="101dp"
                android:layout_height="68dp"
                android:layout_margin="3dp"
                android:background="@drawable/gambar_mobil" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp">

                <TextView
                    android:id="@+id/tv_item_title"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cera_pro"
                    android:text="@string/kategori_mobil"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_item_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cera_light"
                    android:text="@string/nama_mobil"
                    android:textColor="@color/colorFontAbu"
                    android:textSize="14dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/rupiah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Rp"
                        android:textColor="@color/colorFontAbu"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_item_description"
                        android:layout_width="55dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/harga"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorFontAbu"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/perhari"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="1dp"
                        android:text="@string/perhari"
                        android:textColor="@color/colorFontAbu"
                        android:textSize="13sp" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cera_light"
                    android:text="@string/penyewa"
                    android:textColor="@color/colorFontAbu" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cera_light"
                    android:text="@string/spasi"
                    android:textColor="@color/colorFontAbu" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cera_light"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/nama"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorFontAbu" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cera_light"
                    android:text="@string/durasi"
                    android:textColor="@color/colorFontAbu" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cera_light"
                    android:text="@string/spasi"
                    android:textColor="@color/colorFontAbu" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cera_light"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/durasi1"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorFontAbu" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cera_light"
                    android:text="@string/status1"
                    android:textColor="@color/colorFontAbu" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cera_light"
                    android:text="@string/spasi"
                    android:textColor="@color/colorFontAbu" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cera_light"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/status"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorFontAbu" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cera_pro"
                    android:text="@string/total"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cera_light"
                    android:text="@string/spasi"
                    android:textColor="@color/colorFontAbu" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cera_pro"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/harga"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorPrimaryDark" />
            </TableRow>
        </TableLayout>


    </LinearLayout>
</LinearLayout>