<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.ProfilFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/logo_rental"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_logo_kecil" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingTop="20dp">

        <FrameLayout
            android:layout_width="80dp"
            android:layout_height="80dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/gambar_mobil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_circle" />

            <Button
                android:id="@+id/pilihgambar"
                android:layout_width="27dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_camera_alt_24"
                android:gravity="center_vertical" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cera_pro"
                android:text="@string/usernamenya"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cera_light"
                android:text="@string/emailnya"
                android:textColor="@color/colorFontAbu"
                android:textSize="14dp" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="30dp">

        <TextView
            android:id="@+id/tv_edit_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cera_pro"
            android:text="@string/edit_profil"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tv_edit_profil_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cera_light"
            android:paddingTop="10dp"
            android:text="@string/lengkapi"
            android:textColor="@color/colorFontAbu"
            android:textSize="14dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/kelengkapan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="30dp">

        <TextView
            android:id="@+id/tv_kelengkapan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cera_pro"
            android:text="@string/lengkapan"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tv_kelengkapan1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cera_light"
            android:paddingTop="10dp"
            android:text="@string/lengkapi1"
            android:textColor="@color/colorFontAbu"
            android:textSize="14dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cera_pro"
            android:text="@string/logout"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tv_logout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cera_light"
            android:paddingTop="10dp"
            android:text="@string/logout1"
            android:textColor="@color/colorFontAbu"
            android:textSize="14dp" />


    </LinearLayout>

</LinearLayout>