<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/appWidgetBackgroundColor"
    android:padding="@dimen/widget_margin"
    android:theme="@style/ThemeOverlay.RentalAja.AppWidgetContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:padding="@dimen/widget_margin"
        android:weightSum="9">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_logo_kecil" />

        <TextView
            android:id="@+id/appwidget_text"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:contentDescription="@string/appwidget_text"
            android:gravity="center"
            android:text="@string/random"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/appwidget_text1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:contentDescription="@string/appwidget_text"
            android:gravity="center"
            android:text="@string/jumlah"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold|italic" />


    </LinearLayout>
</RelativeLayout>